# agentauth

./: .env.example  .gitignore  DEFINITIVE_AUDIT.md  DEPLOY.md  Dockerfile  ISSUES.md  PROJECT_OVERVIEW.md  README.md  alembic.ini  demo.html  demo_output.txt  docker-compose.yml  netlify.toml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run.sh  test_transactions.py
Investor-Grade Pitch Deck/: README.md  (+1 more)
agentbuy/: .env.example  .gitignore  README.md  demo.html  pyproject.toml
agentbuy/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
agentbuy/frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
agentbuy/frontend/.next/cache/: .tsbuildinfo
agentbuy/frontend/.next/cache/webpack/client-production/: index.pack
agentbuy/frontend/.next/cache/webpack/edge-server-production/: index.pack
agentbuy/frontend/.next/cache/webpack/server-production/: index.pack
agentbuy/frontend/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
agentbuy/frontend/.next/server/app/: _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
agentbuy/frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
agentbuy/frontend/.next/server/chunks/: 819.js
agentbuy/frontend/.next/server/pages/: 404.html  500.html
agentbuy/frontend/.next/static/chunks/: main-app-9dde2842de435ff6.js
agentbuy/frontend/.next/static/chunks/app/: layout-7013ee510e36ce6f.js  page-59ba0b043d742d8c.js
agentbuy/frontend/.next/static/css/: 588e88c01fcd71c6.css
agentbuy/frontend/.next/types/app/: layout.ts  page.ts
agentbuy/frontend/src/app/: globals.css  layout.tsx  page.tsx
agentbuy/frontend/src/components/: VoiceAgent.tsx
agentbuy/src/: __init__.py
agentbuy/src/agent/: __init__.py  intent_parser.py  jarvis.py  jarvis_demo.py  main.py  orchestrator.py  payment_demo.py
agentbuy/src/api/: __init__.py  main.py  payment_api.py
agentbuy/src/brain/: __init__.py  reasoning.py
agentbuy/src/connectors/: __init__.py  base.py  starbucks.py
agentbuy/src/memory/: __init__.py  memory.py
agentbuy/src/models/: __init__.py
agentbuy/src/tools/: __init__.py  auth.py  browser.py  context.py  payments.py
agentbuy/src/voice/: __init__.py
agentbuy/tests/: test_agent.py  test_demo.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentauth/: __init__.py  client.py  exceptions.py  langchain.py  models.py
(+210 files in other folders)
