[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth"
version = "0.1.0"
description = "Python SDK for AgentAuth - Authorization layer for AI agent purchases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AgentAuth Team"}
]
keywords = ["ai", "agents", "authorization", "payments", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/agentauth/agentauth-python"
Documentation = "https://docs.agentauth.io"

[tool.setuptools.packages.find]
where = ["src"]
